--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=9090
+server.port=${PORT:8080}
+#server.port=9090
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=bhaktibelan@gmail.com
