--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,57 @@
-
+# ===============================
+# APP NAME
+# ===============================
 spring.application.name=society-management
 
-spring.datasource.url=jdbc:mysql://localhost:3306/society_database
-spring.datasource.username=root
-spring.datasource.password=root
+# ===============================
+# SERVER (Render Compatible)
+# ===============================
+server.port=${PORT:8080}
 
+# ===============================
+# DATABASE (PostgreSQL - Render)
+# ===============================
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=${PORT:8080}
-#server.port=9090
+
+# ===============================
+# MAIL CONFIG (optional)
+# ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=bhaktibelan@gmail.com
-spring.mail.password=your-app-password
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 app.mail.enabled=false
 app.mail.from.address=society.noreply@example.com
 app.mail.from.name=Society Office
-file.upload.root=uploads   # relative to project working dir
+
+# ===============================
+# FILE UPLOAD
+# ===============================
+file.upload.root=uploads
 spring.mvc.static-path-pattern=/public/**
+
+# ===============================
+# JWT
+# ===============================
 app.jwt.secret=bOELl3z3g8p0m8T8cUJPqS6c9gG3Yc2hX0w1R8qVtZ8k=
 app.jwt.validity-ms=86400000
-# Multipart size limits
+
+# ===============================
+# MULTIPART
+# ===============================
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=12MB
 spring.servlet.multipart.enabled=true
-
-
