--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
